# liath

./: ASSESSMENT_SUMMARY.md  LIBRARY_TRANSFORMATION_SUMMARY.md  README.md  TODO.md  mkdocs.yml  pyproject.toml  test_basic.py  test_embedded.py
docs/: README.md  assessment.md  features.md  library-transformation.md  todo.md
documentation/: index.md
documentation/development/: architecture.md  contributing.md  plugin-development.md
documentation/getting-started/: configuration.md  installation.md  quickstart.md
documentation/plugins/: backup.md  cache.md  db.md  embed.md  file.md  llm.md  monitor.md  overview.md  vdb.md
documentation/reference/: cli.md  http-api.md
documentation/reference/api/: index.md
documentation/scripts/: gen_ref_pages.py
documentation/tutorials/: basic-operations.md  building-plugins.md  lua-queries.md  namespaces.md  vector-search.md
liath/: __init__.py  cli.py  cli_entry.py  database.py  plugin_base.py  server.py
liath/plugins/: __init__.py  backup_restore_plugin.py  db_plugin.py  embed_plugin.py  file_plugin.py  llm_plugin.py  monitoring_logging_plugin.py  query_cache_plugin.py  vdb_plugin.py
liath/storage/: __init__.py  base.py  leveldb_storage.py  rocksdb_storage.py
plugins/: db_plugin.py
test_data/: metadata.json
test_data/auth.db/: LOG  LOG.old
test_data/default.db/: LOG  LOG.old
test_data/test.db/: 000005.ldb  LOG  LOG.old  MANIFEST-000004
tests/: test_basic.py  test_database.py  test_embedded.py
