[tool.poetry]
name = "liath"
version = "0.1.0"
description = "An AI-powered database system with key-value storage, vector search, and AI capabilities"
authors = ["Dipankar Sarkar <me@dipankar.name>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/skelf-research/liath"
keywords = ["database", "ai", "llm", "key-value", "lua", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyyaml = "^6.0.1"
psutil = "^6.0.0"
flask-smorest = "^0.44.0"
lupa = "^2.5"
plyvel = "^1.5.1"
openai = {version = "^1.40.0", optional = true}
llama-cpp-python = {version = "^0.2.85", optional = true}
fastembed = {version = "^0.3.4", optional = true}
pandas = {version = "^2.2.2", optional = true}
usearch = {version = "^2.13.0", optional = true}
python-rocksdb = {version = "^0.7.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.5"
mkdocstrings = {extras = ["python"], version = "^0.27"}
mkdocs-gen-files = "^0.5"
mkdocs-literate-nav = "^0.6"
mkdocs-section-index = "^0.3"

[tool.poetry.scripts]
liath-server = 'liath.server:run_server'
liath-cli = 'liath.cli_entry:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
rocksdb = ["python-rocksdb"]
llm = ["openai", "llama-cpp-python"]
embed = ["fastembed", "pandas"]
vdb = ["usearch"]
